# GameServerFramework

./: CMakeLists.txt  Log.sh  README.md  Run.sh.example
base/: Tidy.h  nAnalysis.h  nAny.h  nAssert.h  nAsyncSqlThread.h  nBaseFilterService.h  nBaseHttpService.h  nBaseMessageService.h  nBaseMonitorService.h  nBaseScriptObj.h  nBaseServer.h  nBaseTickService.h  nBinaryQueue.h  nBloomFilter.h  nByteBuffer.h  nClassManager.h  nClientConn.h  nCmdQueue.h  nCommandCtl.h  nCondition.h  nConfigFile.h  nConnectServerData.h  nConstLengthReadOnlyArray.h  nConstructInPlace.h  nDBConnection.h  nDBConnectionPool.h  nDBUrlManager.h  nDataManager.h  nDataSet.h  nDebugger.h  nDictionary.h  nEncoding.h  nEncrypt.h  nEventCheck.h  nEventLaunch.h  nEventObserver.h  nFile.h  nGroupManager.h  nHashListTable.h  nHashTable.h  (+47 more)
base/Imp/: nAnalysis.cpp  nAny.cpp  nArgp.cpp  nArgp.h  nAssert.cpp  nAsyncSqlThread.cpp  nBaseCommandCtl.cpp  nBaseFilterService.cpp  nBaseHttpService.cpp  nBaseMessageService.cpp  nBaseMonitorService.cpp  nBaseScriptObj.cpp  nBaseServer.cpp  nBaseTickService.cpp  nBinaryQueue.cpp  nBloomFilter.cpp  nBloomFilterImp.h  nByteBuffer.cpp  nClientConn.cpp  nClientConnService.cpp  nClientConnService.h  nCmdQueue.cpp  nConfigFile.cpp  nConnectServerData.cpp  nDBConnection.cpp  nDBConnectionPool.cpp  nDBUrlManager.cpp  nDataManager.cpp  nDebugger.cpp  nDictionary.cpp  nEncoding.cpp  nEncrypt.cpp  nEventLaunch.cpp  nEventObserver.cpp  nFile.cpp  nHttpClient.cpp  nHttpCommandCtl.cpp  nHttpRequest.cpp  nListenService.cpp  nListenService.h  (+38 more)
builders/cmake/: CMakeLists.txt  Custom.txt.example
builders/cmake/base/: CMakeLists.txt
builders/cmake/baseImp/: CMakeLists.txt
builders/cmake/blobTool/: CMakeLists.txt
builders/cmake/dataServer/: CMakeLists.txt
builders/cmake/game/: CMakeLists.txt
builders/cmake/gameImp/: CMakeLists.txt
builders/cmake/gatewayServer/: CMakeLists.txt
builders/cmake/protocol/: CMakeLists.txt
builders/cmake/zoneServer/: CMakeLists.txt
config/: CommonFuncConfig.xml  CommonFuncConfig.xsd  GameConfig.xml  Schedule.xml  TableConfig.xml  ZoneConfig.xml.example  ZoneConfig.xsd
config/Table/: FilterBaseTable.tbl  ItemBaseTable.tbl  SceneTable.tbl
dataServer/: dtGMCommand.cpp  dtGMCommand.h  dtLoginService.cpp  dtLoginService.h  dtMailService.h  dtMessageService.cpp  dtMessageService.h  dtParseForward.cpp  dtParseProto.cpp  dtParseProtoLogin.cpp  dtParseProtoRelation.cpp  dtParseProtoSerialize.cpp  dtParseProtoUser.cpp  dtParseServerRun.cpp  dtSerializeService.cpp  dtSerializeService.h  dtServer.cpp  dtServer.h  dtUser.cpp  dtUser.h  dtUserService.cpp  dtUserService.h
dataServer/Mail/: dtMailService.cpp  dtParseProtoMail.cpp
game/: nAlgebra.h  nAlgo.h  nBaseGameMessageService.h  nBaseManager.h  nBaseMap.h  nBaseRoom.h  nChatService.h  nConvert.h  nDuplManager.h  nEquipData.h  nEvent.h  nGMCommand.h  nGameMessageService.h  nGameScript.h  nGameServer.h  nGameTickService.h  nItem.h  nItemData.h  nItemManager.h  nItemPackage.h  nMailService.h  nMapService.h  nMiscDataSerialize.h  nObject.h  nParamConfigData.h  nPetManager.h  nPos.h  nPublicDefine.h  nRect.h  nRegion.h  nRoomObj.h  nScriptObj.h  nService.h  nSpecialType.h  nSqlData.h  nSsqls.h  nStaticIndex.h  nTable.h  nTableBase.h  nTableFactory.h  (+6 more)
game/Imp/: nAlgebra.cpp  nBaseGameMessageService.cpp  nBaseMap.cpp  nEquipData.cpp  nGameScript.cpp  nGameServer.cpp  nGameTickService.cpp  nItem.cpp  nItemData.cpp  nMiscDataSerialize.cpp  nParseProtoServerRun.cpp  nPublicDefine.cpp  nSsqls.cpp  nTable.cpp  nTableBase.cpp  nTableManager.cpp
gatewayServer/: gwConfigService.cpp  gwConfigService.h  gwFilterService.h  gwLogicConn.cpp  gwLogicConn.h  gwLoginService.cpp  gwLoginService.h  gwLoginSession.cpp  gwLoginSession.h  gwLoginSessionManager.cpp  gwLoginSessionManager.h  gwMessageService.cpp  gwMessageService.h  gwParseForward.cpp  gwParseProtoLogin.cpp  gwParseProtoUser.cpp  gwParseProtocol.cpp  gwParseServerRun.cpp  gwServer.cpp  gwServer.h  gwTelnetService.cpp  gwTelnetService.h  gwUser.cpp  gwUser.h  gwUserNet.cpp  gwUserService.cpp  gwUserService.h  gwUserTaskConn.cpp  gwUserTaskConn.h
protocol/: adminCommand.h  adminCommon.h  baseCommand.cpp  baseCommand.h  commonType.h  equipAttribute.h  equipData.h  forwardCommand.h  itemAttribute.h  itemCommand.h  itemCommon.h  loginCommand.h  loginCommon.h  magicCommon.h  mailCommand.h  mailCommon.h  moneyCommon.h  netCommand.h  packageCommon.h  platformCommand.h  platformCommon.h  relationCommand.h  relationCommon.h  serializeCommand.h  serializeCommon.h  serverInfo.h  serverRunCommand.h  serverRunCommon.h  userCommand.h  userCommon.h
sql/: .svnignore  database.py.example  dbtool.py  installAdmin.sql  installGame.sql  my.cnf  updateAdmin.sql  updateGame.sql  versionAdmin.sql  versionGame.sql
tools/: .bashrc  .gdbinit  .svnignore  .vimrc  AssertAnalyze.sh  AutoDownloadLog.sh  AutoRun.sh  AutoRunAdmin.sh  AutoTools.sh  AutoUpload.sh  ClientResTools.bat  InstallConfig.sh.example  LogAnalyze.sh  MonitorSystem.sh  SetNetDelay.sh  UserDataOperate.py.example  cinclude2dot.pl  dayData.sh  dumpSqlToCSV.sql.exmple  freshSVNIgnore.sh  gdbc  gencode.py.example  initNewMode.sh  install.sh  newGameMode.txt  privilege.sql.example  readSqlData.py  release.sh  sedFile.sh  serverVersionData.ini.example  updateVersion.py  upload.sh  zonelist.txt  zonemanage.py
zoneServer/: zoConfigService.cpp  zoConfigService.h  zoGatewayConn.cpp  zoGatewayConn.h  zoIDPool.cpp  zoIDPool.h  zoLogicConn.cpp  zoLogicConn.h  zoLoginService.cpp  zoLoginService.h  zoLoginSession.cpp  zoLoginSession.h  zoLoginSessionManager.cpp  zoLoginSessionManager.h  zoMailService.h  zoMap.cpp  zoMap.h  zoMapService.cpp  zoMapService.h  zoMessageService.cpp  zoMessageService.h  zoMonitorService.h  zoParseForward.cpp  zoParseProtoLogin.cpp  zoParseProtoUser.cpp  zoParseProtocol.cpp  zoParseSerialize.cpp  zoParseServerRun.cpp  zoRelationUserService.h  zoScheduleService.cpp  zoScheduleService.h  zoScriptService.h  zoServer.cpp  zoServer.h  zoSsqls.cpp  zoSsqls.h  zoSsqlsData.h  zoTaskConn.cpp  zoTaskConn.h  zoUser.cpp  (+3 more)
(+52 files in other folders)
