FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/blobTool/*.cpp)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
    ${THIRD_PARTY_INCLUDE_PATH_A}
    ${THIRD_PARTY_INCLUDE_PATH_B}
    ${THIRD_PARTY_INCLUDE_PATH_C}
    ${THIRD_PARTY_INCLUDE_PATH_D}
    ${THIRD_PARTY_INCLUDE_PATH_E}
    ${THIRD_PARTY_INCLUDE_PATH_F}
    ${THIRD_PARTY_INCLUDE_PATH_G}
    )

LINK_DIRECTORIES(${GOOGLE_PERFTOOLS_LIB_PATH} ${OPENSSL_LIB_PATH} ${PROJECT_SOURCE_DIR}/base ${TBB_LIB_PATH})

ADD_EXECUTABLE(blobTool ${SOURCES})

TARGET_LINK_LIBRARIES(blobTool unwind)
TARGET_LINK_LIBRARIES(blobTool tcmalloc)
TARGET_LINK_LIBRARIES(blobTool protocol)
TARGET_LINK_LIBRARIES(blobTool profiler)
TARGET_LINK_LIBRARIES(blobTool crypto)
TARGET_LINK_LIBRARIES(blobTool game)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/blobTool)
