FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/dataServer/*.cpp)

INCLUDE_DIRECTORIES(
     ${PROJECT_SOURCE_DIR}
     ${PROJECT_SOURCE_DIR}/dataServer/
     ${THIRD_PARTY_INCLUDE_PATH_A}
     ${THIRD_PARTY_INCLUDE_PATH_B}
     ${THIRD_PARTY_INCLUDE_PATH_C}
     ${THIRD_PARTY_INCLUDE_PATH_D}
     ${THIRD_PARTY_INCLUDE_PATH_E}
     ${THIRD_PARTY_INCLUDE_PATH_F}
     ${THIRD_PARTY_INCLUDE_PATH_G}
)

LINK_DIRECTORIES(${GOOGLE_PERFTOOLS_LIB_PATH} ${OPENSSL_LIB_PATH} ${PROJECT_SOURCE_DIR}/base ${CURL_LIB_PATH})

ADD_EXECUTABLE(dataServer ${SOURCES})

TARGET_LINK_LIBRARIES(dataServer unwind ssl crypto profiler)
TARGET_LINK_LIBRARIES(dataServer ${ARES_LIB})
TARGET_LINK_LIBRARIES(dataServer ${CURL_LIB})
TARGET_LINK_LIBRARIES(dataServer tcmalloc)
TARGET_LINK_LIBRARIES(dataServer game ${PROJECT_SOURCE_DIR}/game/libgame.a)
TARGET_LINK_LIBRARIES(dataServer protocol)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/dataServer)
