INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
)

LINK_DIRECTORIES(${GOOGLE_PERFTOOLS_LIB_PATH} ${PROJECT_SOURCE_DIR}/base)

ADD_LIBRARY(game STATIC "${PROJECT_SOURCE_DIR}/game/nGame.cpp")

TARGET_LINK_LIBRARIES(game unwind tcmalloc protocol gameImp base ${PROTOBUFF_LIB})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/game) 
