FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/game/Imp/*.cpp)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
    ${THIRD_PARTY_INCLUDE_PATH_A}
    ${THIRD_PARTY_INCLUDE_PATH_B}
    ${THIRD_PARTY_INCLUDE_PATH_C}
    ${THIRD_PARTY_INCLUDE_PATH_D}
    ${THIRD_PARTY_INCLUDE_PATH_E}
    ${THIRD_PARTY_INCLUDE_PATH_F}
    ${THIRD_PARTY_INCLUDE_PATH_G}
    ${COMMON_PROTO_INCLUDE}
)
LINK_DIRECTORIES(${GOOGLE_PERFTOOLS_LIB_PATH} ${PROJECT_SOURCE_DIR}/base)

ADD_LIBRARY(gameImp STATIC ${SOURCES})

TARGET_LINK_LIBRARIES(gameImp protocol)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/game)
