FILE(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/zoneServer/*.cpp)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
    ${THIRD_PARTY_INCLUDE_PATH_A}
    ${THIRD_PARTY_INCLUDE_PATH_B}
    ${THIRD_PARTY_INCLUDE_PATH_C}
    ${THIRD_PARTY_INCLUDE_PATH_D}
    ${THIRD_PARTY_INCLUDE_PATH_E}
    ${THIRD_PARTY_INCLUDE_PATH_F}
    ${THIRD_PARTY_INCLUDE_PATH_G}
)

LINK_DIRECTORIES(${GOOGLE_PERFTOOLS_LIB_PATH} ${PROJECT_SOURCE_DIR}/base ${OPENSSL_LIB_PATH})

ADD_EXECUTABLE(zoneServer ${SOURCES})

TARGET_LINK_LIBRARIES(zoneServer game unwind tcmalloc)
TARGET_LINK_LIBRARIES(zoneServer protocol)
TARGET_LINK_LIBRARIES(zoneServer profiler)
TARGET_LINK_LIBRARIES(zoneServer crypto)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/zoneServer)
